Right sidebar top spacing fix

--- a/sites/all/themes/atwork_zen/sass/layouts/_atworklayout.scss
+++ b/sites/all/themes/atwork_zen/sass/layouts/_atworklayout.scss
@@ -1300,7 +1300,7 @@ section.region.region-sidebar-second.column.sidebar {
     float: none;
     max-width:28%;
     clear: none;
-    margin-top: -40px;
+    //margin-top: -40px;
     position: inherit;
 }
   ul.tabs-primary.tabs.primary {
